--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,12 @@
 DJANGO_SECRET_KEY=your_django_secret_key_here
 DJANGO_DEBUG=true
 DJANGO_ALLOWED_HOSTS=127.0.0.1,localhost
-FRONTEND_URL=http://localhost:3000
 CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
-STRIPE_SECRET_KEY=your_stripe_secret_key_here
-STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret_here
+CORS_ALLOWED_ORIGIN_REGEXES=
+CSRF_TRUSTED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+DATABASE_URL=
+POSTGRES_DB=axixu
+POSTGRES_USER=axixu
+POSTGRES_PASSWORD=axixu
+POSTGRES_HOST=127.0.0.1
+POSTGRES_PORT=5432
